# distill-lagat

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CMakePresets.json  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/: dense_maze.map  dense_warehouse.map
assets/finetuned_dense_maze/: acc_best.pt  acc_best_jit.pt  loss_best.pt  loss_best_jit.pt  success_best.pt  success_best_jit.pt
assets/finetuned_dense_maze/.hydra/: config.yaml  hydra.yaml  overrides.yaml
assets/pretrained/: acc_best.pt  acc_best_jit.pt  loss_best.pt  loss_best_jit.pt  success_best.pt  success_best.pt_hypra.yaml  success_best_jit.pt
assets/pretrained/.hydra/: config.yaml  hydra.yaml  overrides.yaml
cpp_planners/lagat/: main.cpp
cpp_planners/lagat/lacam/: CMakeLists.txt
cpp_planners/lagat/lacam/include/: collision_table.hpp  graph.hpp  instance.hpp  lacam.hpp  lns.hpp  pibt.hpp  planner.hpp  plns.hpp  policy.hpp  post_processing.hpp  utils.hpp
cpp_planners/lagat/lacam/src/: collision_table.cpp  graph.cpp  instance.cpp  lacam.cpp  lns.cpp  pibt.cpp  planner.cpp  plns.cpp  policy.cpp  post_processing.cpp  translator.cpp  utils.cpp
notebooks/: .gitignore  demo.ipynb
scripts/: build_cpp.sh  collect_expert_trajectories.py  convert_to_imitation_dataset.py  eval_model.py  eval_solver.py  generate_mapf_instances.py  train.py  train_memory_efficient.py
scripts/conf/: collect_expert_trajectories.yaml  convert_to_imitation_dataset.yaml  eval_model.yaml  eval_solver.yaml  train.yaml
scripts/conf/expert/: lacam3.yaml  lagat.yaml
scripts/conf/grid_config/: dense_maze.yaml  dense_warehouse.yaml  random_maze_mixed.yaml
scripts/conf/model/: gnn_planner.yaml  reconstruct.yaml
src/lagat/: __init__.py  features.py  grid_config_generator.py  model.py  run_planners.py  utils.py
src/lagat/interfaces/: cpp_build_config.py
src/lagat/interfaces/lacam3/: CMakeLists.txt  CMakePresets.json  inference.py  main.cpp
src/lagat/interfaces/lagat/: CMakeLists.txt  inference.py  main.cpp
tests/: test_expert.py  test_features.py  test_model.py
