[project]
name = "lagat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hydra-core>=1.3.2",
    "joblib>=1.5.1",
    "jupyterlab>=4.4.3",
    "loguru>=0.7.2",
    "matplotlib>=3.7.2",
    "numpy<2",
    "pandas>=1.4.0",
    "pogema-toolbox",
    "psutil>=5.7.0",
    "pytest>=8.4.1",
    "scipy>=1.1.0",
    "setuptools>=58.2.0",
    "torch>=2.8.0",
    "torch-geometric>=2.6.1",
    "tqdm>=4.67.1",
    "tomli>=2.0.1",
    "typing_extensions>=4.12.2",
    "wandb>=0.21.1",
]


[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipywidgets>=8.1.8",
    "isort>=6.0.1",
    "jupyter-archive>=3.4.0",
    "jupyterlab-code-formatter>=3.0.2",
    "jupyterlab-lsp>=5.1.1",
    "python-lsp-server>=1.12.2",
    "ruff>=0.11.12",
    "widgetsnbextension>=4.0.15",
]


[tool.uv]
package = true

[tool.uv.sources]
pogema-toolbox = { git = "https://github.com/Kei18/pogema-toolbox.git" }
torch = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.lagat.cpp]
build_root = "build"
interface_lacam3_dir = "interface-lacam3"
interface_lagat_dir = "interface-lagat"
